--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,7 +6,7 @@
       <hr class="short-line"/>
     </div>
     <div class="box2">
-      <img class="location-icon" [src]="isLight ? '../assets/img/about/location.svg' : '../assets/img/about/location-dark.svg'" alt="" />
+      <img class="location-icon" [src]="colorTheme.isLight ? '../assets/img/about/location.svg' : '../assets/img/about/location-dark.svg'" alt="" />
       <h3 class="sm-heading location">Enschede, Netherlands</h3>
     </div>
     <div class="box3">
