--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,6 +6,11 @@
   a {
     color: $primary-color-light;
   }
+  
+  g {
+    @include easeOut;
+    fill: $primary-color-light;
+  }
 }
 
 .dark {
@@ -13,6 +18,11 @@
   color: $primary-color-dark;
   a {
     color: $primary-color-dark;
+  }
+  
+  g {
+    @include easeOut;
+    fill: $primary-color-dark;
   }
 }
 
@@ -39,7 +49,17 @@
       &:hover {
         color: $third-color;
         @include easeOut;
+
+        g {
+          fill: $third-color;
+          @include easeOut;
+        }
       }
+    }
+
+    svg {
+      width: 2rem;
+      height: 2rem;
     }
   }
 
