--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,14 +6,14 @@
       <hr class="short-line"/>
     </div>
     <div class="box2">
-      <img class="location-icon" [src]="colorTheme.isLight ? '../assets/img/about/location.svg' : '../assets/img/about/location-dark.svg'" alt="" />
+      <img class="location-icon" [src]="colorTheme.isLight ? 'assets/img/about/location.svg' : 'assets/img/about/location-dark.svg'" alt="" />
       <h3 class="sm-heading location">Enschede, Netherlands</h3>
     </div>
     <div class="box3">
       <h2>Fast learner, World explorer, Observer</h2>
     </div>
     <div class="box5">
-      <img src="../assets/img/about/about.jpg" alt="" class="shadowed">
+      <img src="assets/img/about/about.jpg" alt="" class="shadowed">
     </div>
     <div class="box4">
       <p>Hi🙋! I am currently a master student in University of Twente and KTH Royal Institute of Technology studying a double degree program EIT Digital Master School in Human-Computer Interaction and Design. My background in software engineering and diverse interest in phychology, design, art, etc. allowed me to be capable of carrying out user-centered design for novel digital services. </p>
