--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div id="home" [className]="colorTheme.isLight ? 'home light' : 'home dark'">
-    <img src="../assets/img/home/main.jpg" alt="" class="home-img shadowed">
+    <img src="assets/img/home/main.jpg" alt="" class="home-img shadowed">
     <div class="lg-intro">
       <div>
         <h1>Oh, HI!</h1>
@@ -47,5 +47,5 @@
         </a>
       </div>
     </div>
-    <img src="../assets/img/home/path.svg" alt="" class="decoration">
+    <img src="assets/img/home/path.svg" alt="" class="decoration">
   </div>
