--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,6 +1,6 @@
 <div id="projects" [className]="colorTheme.isLight ? 'projects light' : 'projects dark'">
   <div *ngFor="let project of projects" class="project">
-    <img src="../../assets/img/projects/{{ project.id }}/{{ project.images[0] }}" alt="">
+    <img src="assets/img/projects/{{ project.id }}/{{ project.images[0] }}" alt="">
     <div class="overlay">
       <h2>{{ project.title }}</h2>
       <p>{{ project.brief }}</p>
