--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,5 +1,5 @@
 <div id="projects" [className]="colorTheme.isLight ? 'projects light' : 'projects dark'">
-  <div *ngFor="let project of projects" class="project">
+  <div *ngFor="let project of projects" class="project" (click)="selectProject(project)" routerLink="/project">
     <img src="assets/img/projects/{{ project.id }}/{{ project.images[0] }}" alt="">
     <div class="overlay">
       <h2>{{ project.title }}</h2>
