Added contact information. Draft done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
-<div [className]="isLight ? 'content light' : 'content dark'">
+<div class="content">
   <img src="assets/img/bg.jpg" alt="" id="bg-img">
   
   <router-outlet></router-outlet>
 
-  <div id="footer">Copyright &copy; 2019 Zhuowen Fang</div>
 </div>
