--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -47,5 +47,5 @@
         </a>
       </div>
     </div>
-    <img src="assets/img/home/path.svg" alt="" class="decoration">
+    <!-- <img src="assets/img/home/path.svg" alt="" class="decoration"> -->
   </div>
