--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,14 @@
-<p>contact works!</p>
+<div id="contact" [className]="colorTheme.isLight ? 'contact dark' : 'contact light'">
+  <h2>I am currently looking for a company for master thesis in UX design, NLP or Speech Processing. Please contact me if you are interested!</h2>
+  <div class="outerbox">
+    <div class="box">
+      <div class="line"></div>
+      <h3>Send me an email 📧 <br><a href = "mailto: z.fang-1@student.utwente.nl">z.fang-1@<br>student.utwente.nl</a></h3>
+    </div>
+    <div class="box">
+      <div class="line"></div>
+      <h3><a href="https://drive.google.com/file/d/1xxVOW4_9oUDL4lOIeauLTMJO3yogAsl0/view?usp=sharing" download>Download my <br>CV here 👈</a></h3>
+    </div>
+  </div>
+  <div id="footer" class="footer">Copyright &copy; 2019 Zhuowen Fang</div>
+</div>
