--- a/src/app/project-detail/project-detail.component.scss
+++ b/src/app/project-detail/project-detail.component.scss
@@ -38,6 +38,10 @@
   padding: 0;
   box-sizing: border-box;
 
+  h1, h2, h3 {
+    font-weight: 700;
+  }
+
   a {
     text-decoration: none;
     &:hover {
