--- a/src/app/_config.scss
+++ b/src/app/_config.scss
@@ -6,6 +6,8 @@ $bg-color-light: #fff;
 $bg-color-dark: #343434;
 $background-opacity: 0.9;
 
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,500,700&display=swap');
+
 @mixin easeOut {
   transition: all 0.5s ease-out;
 }
