--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="box2">
       <img class="location-icon" [src]="colorTheme.isLight ? 'assets/img/about/location.svg' : 'assets/img/about/location-dark.svg'" alt="" />
-      <h3 class="sm-heading location">Enschede, Netherlands</h3>
+      <h3 class="sm-heading location">Stockholm, Sweden</h3>
     </div>
     <div class="box3">
       <h2>Fast learner, World explorer, Observer</h2>
